--- a/app/Resources/assets/scss/sil_toolkit.scss
+++ b/app/Resources/assets/scss/sil_toolkit.scss
@@ -31,13 +31,11 @@
     Alerts
 */
 
-#js-alerts_container {
+#alerts_container {
     position: fixed;
     top: $alert-margin-bottom;
-    z-index: 100;
-
-    &:not(.container-fluid) {
-        margin-left: 2 * $grid-gutter-width;
-    }
+    left: 50%;
+    transform: translate(-50%);
+    z-index: $zindex-fixed;
 }
 
