--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,7 +59,7 @@
         <div class="grid-container">
 
 {% block messages %}
-            <div class="{{ container_class }}" id="js-alerts_container">
+            <div class="{{ container_class }}" id="alerts_container">
         {% for type, messages in app.flashes %}
             {% for message in messages %}
                 <div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">
