“select2entity.js” is not a module…

--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -292,6 +292,7 @@
 
 {% block javascripts %}
     {{ encore_entry_script_tags('select2') }}
+    <script src="{{ asset('bundles/tetranzselect2entity/js/select2entity.js') }}"></script>
     <script>
 
         function toogleTeachingModeHours(){
