--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -339,7 +339,7 @@
                                 teacherAlreadyInTeam = true;
                                 SILTools.alert({
                                     type: 'info',
-                                    text: "Cet(te) enseignant(e) fait déjà partie de l'équipe."
+                                    text: "Cette personne fait déjà partie de l'équipe enseignante."
                                 });
                             }
                         });
