--- a/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
@@ -4,56 +4,58 @@
 {% endblock %}
 
 {% block main %}
-    {{ form_start(form) }}
 
     <div class="row mb-2">
         <div class="col">
             <h5 class="mt-3">
-                Modalité de contrôle des connaissances
+                Modalités de contrôle des connaissances
             </h5>
         </div>
     </div>
+
+    {{ form_start(form) }}
+
     <div class="row m-3 d-flex flex-row justify-content-around">
         <div class="col-md-6 pl-0" >
-        <table class="table table-dark">
-            <thead>
-                <tr>
-                <th scope="col">1ère session</th>
-                </tr>
-                <tr>
-                <th>Type d'évaluation</th>
-                <th>Coef</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="bg-info">
-                <td><p class="my-0">Contrôle Continu</p> ({{courseInfo.mccCcNbEvalSession1}} minimum)</td>
-                <td> {{courseInfo.mccCcCoeffSession1}}%</td>
-                </tr>
-                <tr class="bg-primary">
-                <td>Contrôle Terminal - {{courseInfo.mccCtDurationSession1}} </td>
-                <td>{{courseInfo.mccCtCoeffSession1}}%</td>
-                </tr>
-            </tbody>
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                    <th scope="col">1ère session</th>
+                    </tr>
+                    <tr>
+                    <th>Type d'évaluation</th>
+                    <th>Coef</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="bg-info">
+                    <td><p class="my-0">Contrôle Continu</p> ({{courseInfo.mccCcNbEvalSession1}} minimum)</td>
+                    <td> {{courseInfo.mccCcCoeffSession1}}%</td>
+                    </tr>
+                    <tr class="bg-primary">
+                    <td>Contrôle Terminal - {{courseInfo.mccCtDurationSession1}}</td>
+                    <td>{{courseInfo.mccCtCoeffSession1}}%</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
         <div class="col-md-6 pr-0" >
-        <table class="table table-dark">
-            <thead>
-                <tr>
-                <th scope="col">2ème session</th>
-                </tr>
-                <tr>
-                <th>Type d'évaluation</th>
-                <th>Coef</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="bg-info">
-                <td>Contrôle Terminal - {{courseInfo.mccCtDurationSession2}} </td>
-                <td>{{courseInfo.mccCtCoeffSession2}}%</td>
-                </tr>
-            </tbody>
+            <table class="table table-dark">
+                <thead>
+                    <tr>
+                    <th scope="col">2ème session</th>
+                    </tr>
+                    <tr>
+                    <th>Type d'évaluation</th>
+                    <th>Coef</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="bg-info">
+                    <td>Contrôle Terminal - {{courseInfo.mccCtDurationSession2}}</td>
+                    <td>{{courseInfo.mccCtCoeffSession2}}%</td>
+                    </tr>
+                </tbody>
             </table>
         </div>
     </div>
@@ -62,11 +64,7 @@
             <h5 class="mt-3">
                 Recommandations
             </h5>
-        </div>
-    </div>
-    <div class="row mb-2">
-        <div class="col">
-        {{form_widget(form.mccAdvice)}}
+            {{form_widget(form.mccAdvice)}}
         </div>
     </div>
     <div class="row my-3">
