--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -101,7 +101,7 @@
                             cache: false,
                             timeout: 600000
                         }).done(function(response){
-                            response.renderTabId = 'panel_tab-7';
+                            //response.renderTabId = 'panel_tab-7';
                             Syllabus.handleAjaxResponse(response);
                         }).always(function(){
                             SILTools.spinner.fadeOut( );
