--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -92,30 +92,37 @@
                 <div class="tab-content border border-top-0 p-2">
 
                     <div class="tab-pane fade show active" id="panel_tab-1"
+                         data-submit-url="{{ path('save_presentation_course_info', { 'id': courseInfo.id }) }}"
                          role="tabpanel" aria-labelledby="tab-1">
                     </div>
 
                     <div class="tab-pane fade" id="panel_tab-2"
+                         data-submit-url="{{ path('save_activities_course_info', { 'id': courseInfo.id }) }}"
                          role="tabpanel" aria-labelledby="tab-2">
                     </div>
 
                     <div class="tab-pane fade" id="panel_tab-3"
+                         data-submit-url="{{ path('save_objectives_course_info', { 'id': courseInfo.id }) }}"
                          role="tabpanel" aria-labelledby="tab-3">
                     </div>
 
                     <div class="tab-pane fade" id="panel_tab-4"
+                         data-submit-url="{{ path('save_mcc_course_info', { 'id': courseInfo.id }) }}"
                          role="tabpanel" aria-labelledby="tab-4">
                     </div>
 
                     <div class="tab-pane fade" id="panel_tab-5"
+                         data-submit-url="{{ path('save_equipments_course_info', { 'id': courseInfo.id }) }}"
                          role="tabpanel" aria-labelledby="tab-5">
                     </div>
 
                     <div class="tab-pane fade" id="panel_tab-6"
+                         data-submit-url="{{ path('save_infos_course_info', { 'id': courseInfo.id }) }}"
                          role="tabpanel" aria-labelledby="tab-6">
                     </div>
 
                     <div class="tab-pane fade" id="panel_tab-7"
+                         data-submit-url="{{ path('save_closing_remarks_course_info', { 'id': courseInfo.id }) }}"
                          role="tabpanel" aria-labelledby="tab-7">
                     </div>
 
