--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -143,7 +143,7 @@
     {% if courseInfo.id is defined and courseInfo.id %}
         <script>
 
-            Syllabus.tabLoaderInit( );
+            Syllabus.tabsInit( );
 
             $(document).ready(function(){
                 $(document).on('click', '#publishButton', function(){
