--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -264,14 +264,12 @@
              * Submit the form
              */
             $("form[name='edit_activities_course_info']").submit(function(e){
+
+                var form = $(this)[0];
+
                 e.preventDefault();
 
-                for ( instance in CKEDITOR.instances ) {
-                    CKEDITOR.instances[instance].updateElement();
-                }
-
-                var form = $(this);
-                //var data = new FormData(form);
+                Syllabus.updateEditors(form);
 
                 // Set sections order
                 sectionsCollectionHolder.find('li.section').each(function(order){
@@ -292,17 +290,16 @@
                     $(this).find("input[id$='_order']").val(order+1);
                 });
 
-
                 SILTools.spinner.fadeIn( {
                     always: function(){
                         $.ajax({
                             type: 'POST',
-                            //enctype: 'multipart/form-data',
-                            //processData: false,  // Important!
-                            //contentType: false,
+                            enctype: 'multipart/form-data',
+                            processData: false,  // Important!
+                            contentType: false,
                             url: '{{ path('save_activities_course_info', { 'id': courseInfo.id })|escape('js') }}',
-                            data: form.serialize(),
-                            //cache: false,
+                            data: new FormData(form),
+                            cache: false,
                             //timeout: 600000
                         }).done(function(response){
                             Syllabus.handleAjaxResponse(response);
