--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -82,7 +82,7 @@
 
                 e.preventDefault();
 
-                Syllabus.updateEditors(form);
+                Syllabus.updatePanelEditors(form);
 
                 SILTools.spinner.fadeIn( {
                     always: function(){
