--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -134,7 +134,7 @@
 
                 e.preventDefault();
 
-                Syllabus.updateEditors(form);
+                Syllabus.updatePanelEditors(form);
 
                 // Set equipments order
                 equipmentsCollectionHolder.find('div.equipment').each(function(order){
