--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -405,7 +405,7 @@
 
                 e.preventDefault();
 
-                Syllabus.updateEditors(form);
+                Syllabus.updatePanelEditors(form);
 
                 SILTools.spinner.fadeIn( {
                     always: function(){
