--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -269,7 +269,7 @@
 
                 e.preventDefault();
 
-                Syllabus.updateEditors(form);
+                Syllabus.updatePanelEditors(form);
 
                 // Set sections order
                 sectionsCollectionHolder.find('li.section').each(function(order){
