--- a/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
@@ -91,7 +91,7 @@
 
                 e.preventDefault();
 
-                Syllabus.updateEditors(form);
+                Syllabus.updatePanelEditors(form);
 
                 SILTools.spinner.fadeIn( {
                     always: function(){
