--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -265,12 +265,6 @@
              */
             $("form[name='edit_activities_course_info']").submit(function(e){
 
-                var form = $(this)[0];
-
-                e.preventDefault();
-
-                Syllabus.updatePanelEditors(form);
-
                 // Set sections order
                 sectionsCollectionHolder.find('li.section').each(function(order){
                     // Set section order
@@ -290,24 +284,8 @@
                     $(this).find("input[id$='_order']").val(order+1);
                 });
 
-                SILTools.spinner.fadeIn( {
-                    always: function(){
-                        $.ajax({
-                            type: 'POST',
-                            enctype: 'multipart/form-data',
-                            processData: false,  // Important!
-                            contentType: false,
-                            url: '{{ path('save_activities_course_info', { 'id': courseInfo.id })|escape('js') }}',
-                            data: new FormData(form),
-                            cache: false,
-                            //timeout: 600000
-                        }).done(function(response){
-                            Syllabus.handleAjaxResponse(response);
-                        }).always(function(){
-                            SILTools.spinner.fadeOut( );
-                        });
-                    }
-                });
+                Syllabus.submitPanelForm( e, this );
+
             });
 
         });
