--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -124,41 +124,18 @@
             });
 
 
-
             /**
              * Submit the form
              */
             $("form[name='edit_equipments_course_info']").submit(function(e){
-
-                var form = $(this)[0];
-
-                e.preventDefault();
-
-                Syllabus.updatePanelEditors(form);
 
                 // Set equipments order
                 equipmentsCollectionHolder.find('div.equipment').each(function(order){
                     $(this).find("input[id$='_order']").val(order+1);
                 });
 
-                SILTools.spinner.fadeIn( {
-                    always: function(){
-                        $.ajax({
-                            type: 'POST',
-                            enctype: 'multipart/form-data',
-                            processData: false,  // Important!
-                            contentType: false,
-                            url: '{{ path('save_equipments_course_info', { 'id': courseInfo.id })|escape('js') }}',
-                            data: new FormData(form),
-                            cache: false,
-                            timeout: 600000
-                        }).done(function(response){
-                            Syllabus.handleAjaxResponse(response);
-                        }).always(function(){
-                            SILTools.spinner.fadeOut( );
-                        });
-                    }
-                });
+                Syllabus.submitPanelForm( e, this );
+
             });
         });
     </script>
