--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -313,10 +313,6 @@
              */
             $("form[name='edit_objectives_course_info']").submit(function(e){
 
-                var form = $(this)[0];
-
-                e.preventDefault();
-
                 // Set achievements order
                 achievementsCollectionHolder.find('li.achievement').each(function(order){
                     // Set section order
@@ -347,25 +343,8 @@
                     });
                 });
 
+                Syllabus.submitPanelForm( e, this );
 
-                SILTools.spinner.fadeIn( {
-                    always: function(){
-                        $.ajax({
-                            type: 'POST',
-                            enctype: 'multipart/form-data',
-                            processData: false,
-                            contentType: false,
-                            url: '{{ path('save_objectives_course_info', { 'id': courseInfo.id })|escape('js') }}',
-                            data: new FormData(form),
-                            cache: false
-                        }).done(function(response){
-                            //response.renderTabId = 'panel_tab-3';
-                            Syllabus.handleAjaxResponse(response);
-                        }).always(function(){
-                            SILTools.spinner.fadeOut( );
-                        });
-                    }
-                });
             });
         });
     </script>
