--- a/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_equipments_course_info_tab.html.twig
@@ -123,7 +123,7 @@
 
 
         /**
-         * Submit the form
+         * Form submission
          */
         $("form[name='edit_equipments_course_info']").submit(function(e){
 
