--- a/app/Resources/views/course/edit_infos_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_infos_course_info_tab.html.twig
@@ -39,7 +39,7 @@
     <script>
 
         /**
-         * Submit the form
+         * Form submission
          */
         $("form[name='edit_infos_course_info']").submit(function(e){
             Syllabus.submitPanelForm( e, this );
