--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -394,7 +394,7 @@
         });
 
         /**
-         * Submit form
+         * Form submission
          */
         $("form[name='edit_presentation_course_info']").submit(function(e){
             Syllabus.submitPanelForm( e, this );
