--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -256,7 +256,7 @@
         });
 
         /**
-         * Submit the form
+         * Form submission
          */
         $("form[name='edit_activities_course_info']").submit(function(e){
 
