--- a/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_closing_remarks_course_info_tab.html.twig
@@ -71,7 +71,7 @@
         });
 
         /**
-         * Submit the form
+         * Form submission
          */
         $("form[name='edit_closing_remarks_course_info']").submit(function(e){
             Syllabus.submitPanelForm( e, this );
