--- a/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_mcc_course_info_tab.html.twig
@@ -81,7 +81,7 @@
     <script>
 
         /**
-         * Submit the form
+         * Form submission
          */
         $("form[name='edit_mcc_course_info']").submit(function(e){
             Syllabus.submitPanelForm( e, this );
