--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -308,7 +308,7 @@
         });
 
         /**
-         * Submit the form
+         * Form submission
          */
         $("form[name='edit_objectives_course_info']").submit(function(e){
 
