Typo (lagage etc…).

--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -29,27 +29,27 @@
                     <h6>Verbe + objet (contenu) + contexte</h6>
                     </p>
                     <p>
-                        <u>Exemple en Sciences Humaine et Sociale :</u>
+                        <u>Exemples en Sciences Humaine et Sociale :</u>
                         <ul>
                             <li>
-                                Produire des documents d'aide à la décision à partir de l'analyse d'une situation économiquer
+                                produire des documents d'aide à la décision à partir de l'analyse d'une situation économique,
                             </li>
                             <li>
-                                Présenter les résultats d'une étude de marché donnée aux différentes étapes sur la base d'une recherche documentaire
+                                présenter les résultats d'une étude de marché donnée aux différentes étapes sur la base d'une recherche documentaire.
                             </li>
                         </ul>
-                        <u>Exemple en Sciences :</u>
+                        <u>Exemples en Sciences :</u>
                         <ul>
                             <li>
-                                Développer des applications simples en lagage orienté objet
+                                développer des applications simples en langage orienté objet,
                             </li>
                             <li>
-                                Utiliser des formules menant à l'interprétation des résultats dans une problématique de machine à données manquantes
+                                utiliser des formules menant à l'interprétation des résultats dans une problématique de machine à données manquantes.
                             </li>
                         </ul>
                     </p>
                     <p>
-                        Cours dédié à l'Approche Par Compétences (clé d'inscription = APC) :
+                        Cours dédié à l'Approche Par Compétences (clé d'inscription = APC) :
                     </p>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                 <div class="col">
                     <div class="row mb-2">
                         <div class="col">
-                            <strong>A la fin de ce cours, l'étudiant sera capable de...</strong>
+                            <strong>À la fin de ce cours, l'étudiant sera capable de…</strong>
                         </div>
                     </div>
                     <div class="row">
@@ -91,7 +91,7 @@
                 <div class="col">
                     <div class="row mb-2">
                         <div class="col">
-                            <strong>Avant le début du cours, l'étudiant doit...</strong>
+                            <strong>Avant le début du cours, l'étudiant doit…</strong>
                         </div>
                     </div>
                     <div class="row">
@@ -118,19 +118,19 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <h5>Remédiation / Aide à la réussite</h5>
+                    <h5>Remédiation / aide à la réussite</h5>
                 </div>
             </div>
             <div class="row border border-primary rounded p-2 my-3 mx-1">
                 <div class="col">
                     <div class="row mb-2">
                         <div class="col">
-                            <strong>Si l'étudiant rencontre des difficultés, il peut...</strong>
+                            <strong>Si l'étudiant rencontre des difficultés, il peut…</strong>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-auto">
-                            <span>Assister à des séances de tutorat ?</span>
+                            <span>Assister à des séances de tutorat :</span>
                         </div>
                         <div class="col-md-auto" data-toggle="collapse" href="#collapseTutoring" role="button"
                         aria-expanded"{{ (form.vars.data.tutoring == 1) ? 'true' : 'false'}}" aria-controls="collapseTutoring">
@@ -150,7 +150,7 @@
                             <div class="row">
                                 <div class="col">
                                     {{ form_widget(form.tutoringDescription) }}
-                                    <label alt="Dates, lieux, enseignants, ..." placeholder="Dates, lieux, enseignants, ..."></label>
+                                    <label alt="Dates, lieux, enseignants, …" placeholder="Dates, lieux, enseignants, ..."></label>
                                 </div>
                             </div>
                         </div>
