--- a/app/Resources/views/course/edit_activities_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_activities_course_info_tab.html.twig
@@ -134,12 +134,7 @@
             // Remove a activity from collection
             activitiesCollectionHolder.on('click', '.activity-collection-remove', function(){
                 if(confirm("Êtes-vous sûr(e) de vouloir supprimer cette activité ?")) {
-                    var form = $(this).closest(".activity");
-                    form.fadeOut({
-                        always: function () {
-                            form.remove();
-                        }
-                    });
+                    Syllabus.removeListElement($(this).closest('.activity'));
                 }
             });
         }
@@ -230,12 +225,7 @@
          */
         evaluationsCollectionHolder.on('click', '.evaluation-collection-remove', function(){
             if(confirm("Êtes-vous sûr(e) de vouloir supprimer cette évaluation ?")) {
-                var form = $(this).closest("div.evaluation");
-                form.fadeOut({
-                    always: function () {
-                        form.remove();
-                    }
-                });
+                Syllabus.removeListElement($(this).closest('div.evaluation'));
             }
         });
 
