--- a/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
+++ b/app/Resources/views/course/edit_objectives_course_info_tab.html.twig
@@ -225,12 +225,7 @@
          */
         achievementsCollectionHolder.on('click', '.achievement-collection-remove', function () {
             if (confirm("Êtes-vous sûr(e) de vouloir supprimer cet acquis d'apprentissage ?")) {
-                var form = $(this).closest("li.achievement");
-                form.fadeOut({
-                    always: function () {
-                        form.remove();
-                    }
-                });
+                Syllabus.removeListElement($(this).closest('li.achievement'));
             }
         });
 
@@ -262,12 +257,7 @@
          */
         prerequisitesCollectionHolder.on('click', '.prerequisite-collection-remove', function () {
             if (confirm("Êtes-vous sûr(e) de vouloir supprimer ce prérequis ?")) {
-                var form = $(this).closest("li.prerequisite");
-                form.fadeOut({
-                    always: function () {
-                        form.remove();
-                    }
-                });
+                Syllabus.removeListElement($(this).closest('li.prerequisite'));
             }
         });
 
@@ -298,12 +288,7 @@
          */
         tutoringResourcesCollectionHolder.on('click', '.tutoringResource-collection-remove', function () {
             if (confirm("Êtes-vous sûr(e) de vouloir supprimer cette remédiation ?")) {
-                var form = $(this).closest("li.tutoringResource");
-                form.fadeOut({
-                    always: function () {
-                        form.remove();
-                    }
-                });
+                Syllabus.removeListElement($(this).closest('li.tutoringResource'));
             }
         });
 
