1st panel factorization.

--- a/app/Resources/views/course/edit_presentation_course_tab.html.twig
+++ b/app/Resources/views/course/edit_presentation_course_tab.html.twig
@@ -353,12 +353,7 @@
          * Remove a teacher form collection
          */
         teachersCollectionHolder.on('click', '.teacher-collection-remove', function(){
-            var form = $(this).closest("li.teacher");
-            form.fadeOut({
-                always: function(){
-                    form.remove();
-                }
-            });
+            Syllabus.removeListElement($(this).closest('li.teacher'));
         });
 
         /**
