--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="collapse multi-collapse show" id="collapse_{{ section.vars.id }}">
+                <div class="collapse show" id="collapse_{{ section.vars.id }}">
                     <div class="row">
                         <div class="col">
                             <div class="row">
