2nd tab: sections now come folded.

--- a/app/Resources/views/form/sections_field.html.twig
+++ b/app/Resources/views/form/sections_field.html.twig
@@ -5,7 +5,7 @@
                 <i class="fas fa-caret-down" title="Déplier / Replier."
                    data-toggle="collapse"
                    data-target="#collapse_{{ section.vars.id }}"
-                   aria-expanded="true"
+                   aria-expanded="false"
                    aria-controls="collapse_{{ section.vars.id }}"
                 ></i>
             </div>
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="collapse show" id="collapse_{{ section.vars.id }}">
+                <div class="collapse" id="collapse_{{ section.vars.id }}">
                     <div class="row">
                         <div class="col">
                             <div class="row">
