Moving initial tab “active” class to markup.

--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -25,7 +25,7 @@
                 <ul class="nav nav-tabs">
 
                     <li class="nav-item">
-                        <a class="nav-link" id="tab-1"
+                        <a class="nav-link active" id="tab-1"
                            data-route="{{ path('edit_presentation_course_info', { 'id': courseInfo.id }) }}"
                            role="tab" data-toggle="tab" href="#panel_tab-1"
                            aria-controls="panel_tab-1" aria-selected="true">
