--- a/app/Resources/views/form/activities_field.html.twig
+++ b/app/Resources/views/form/activities_field.html.twig
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-body p-1 bg-white border-0 rounded-bottom collapse multi-collapse show" id="collapse_{{ activity.vars.id }}">
+        <div class="card-body p-1 bg-white border-0 rounded-bottom collapse show" id="collapse_{{ activity.vars.id }}">
             <div class="row">
                 <div class="col">
                     {{ form_widget(activity.description) }}
